--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "homepage",
   "private": true,
   "scripts": {
+    "clean": "rimraf out && rimraf .next",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -19,7 +20,7 @@
     "@commitlint/config-conventional": "^16.0.0",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
     "eslint-config-prettier": "^8.3.0",
@@ -27,9 +28,10 @@
     "husky": "^7.0.4",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.1",
+    "prettier-plugin-tailwindcss": "^0.1.4",
     "pretty-quick": "^3.1.3",
-    "tailwindcss": "^3.0.7",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.0.18",
     "typescript": "4.5.4"
   }
 }
