--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "framer-motion": "^6.2.4",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
