--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "format": "prettier ./src/**/*.tsx",
+    "lint": "next lint --fix",
     "export": "next export"
   },
   "dependencies": {
